fixed up the overflow in chat

--- a/src/index.scss
+++ b/src/index.scss
@@ -411,11 +411,16 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   font-size: 1.2vmax;
   color: rgb(99, 99, 108);
 }
-#myChat{
-  width: 100vw;
-  height: 100vh;
+
+#myChat {
   @include flex-column(false, true, true);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
   position: relative;
+  overflow: hidden;
+
 }
 
 
@@ -475,12 +480,12 @@ $font-stack: 'Segoe UI', Roboto, sans-serif;
   padding-top: 20px
 }
 
-#subchat{
-  @include flex-column(true, true, true);
+.subchat{
+  @include flex-column(true, true, false);
   width: 100%;
-  height: 100%;
-  margin-bottom: 65vh;
-  overflow-y: scroll;
+  margin-bottom: 40vh;
+  overflow-y: auto;
+  padding-top: 60px;
 }
 .chatMessages{
   @include flex-column(true, true, true);
